<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_settings"
    app:startDestination="@id/settingsLanding">

    <fragment
        android:id="@+id/settingsLanding"
        android:name="tv.letsrobot.controller.android.activities.settings.SettingsLanding"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings_landing" >
        <action
            android:id="@+id/action_settingsLanding_to_settingsConnection"
            app:destination="@id/settingsConnection" />
        <action
            android:id="@+id/action_settingsLanding_to_settingsRobot"
            app:destination="@id/settingsRobot" />
        <action
            android:id="@+id/action_settingsLanding_to_settingsCamera"
            app:destination="@id/settingsCamera" />
        <action
            android:id="@+id/action_settingsLanding_to_settingsMicrophone"
            app:destination="@id/settingsMicrophone" />
        <action
            android:id="@+id/action_settingsLanding_to_settingsAudio"
            app:destination="@id/settingsAudio" />
        <action
            android:id="@+id/action_settingsLanding_to_settingsDisplay"
            app:destination="@id/settingsDisplay" />
    </fragment>
    <action
        android:id="@+id/action_nav_settings_pop"
        app:popUpTo="@id/nav_settings"
        app:popUpToInclusive="true" />
    <fragment
        android:id="@+id/settingsConnection"
        android:name="tv.letsrobot.controller.android.activities.settings.SettingsConnection"
        android:label="@string/connectionSettingsTitle" />
    <fragment
        android:id="@+id/settingsRobot"
        android:name="tv.letsrobot.controller.android.activities.settings.SettingsRobot"
        android:label="@string/robotSettingsTitle"
        tools:layout="@layout/fragment_settings_robot" />
    <fragment
        android:id="@+id/settingsCamera"
        android:name="tv.letsrobot.controller.android.activities.settings.SettingsCamera"
        android:label="@string/cameraSettingsTitle" />
    <fragment
        android:id="@+id/settingsMicrophone"
        android:name="tv.letsrobot.controller.android.activities.settings.SettingsMicrophone"
        android:label="@string/microphoneSettingsTitle" />
    <fragment
        android:id="@+id/settingsAudio"
        android:name="tv.letsrobot.controller.android.activities.settings.SettingsAudio"
        android:label="@string/audioSettingsTitle" />
    <fragment
        android:id="@+id/settingsDisplay"
        android:name="tv.letsrobot.controller.android.activities.settings.SettingsDisplay"
        android:label="@string/displaySettingsTitle" />
</navigation>